--- a/Driver/wwwroot/css/style.css
+++ b/Driver/wwwroot/css/style.css
@@ -14,11 +14,20 @@
 
 #header {
     z-index: 5;
+    height: 75px;
 }
 
 #body {
     z-index: 0;
     cursor: pointer;
+    position: relative;
+    overflow: auto;
+    height: calc(100vh - 75px);
+    width: 100%;
+    background: red;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
 }
 
 #menu {
