--- a/Driver/wwwroot/css/style.css
+++ b/Driver/wwwroot/css/style.css
@@ -11,7 +11,9 @@
 #app {
     padding-top: 75px;
 }
-
+#loading {
+    z-index: 99999;
+}
 #header {
     z-index: 5;
     height: 75px;
@@ -24,7 +26,6 @@
     overflow: auto;
     height: calc(100vh - 75px);
     width: 100%;
-    background: red;
     display: inline-block;
     padding: 0;
     margin: 0;
